--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+div,
+textarea,
+a,
+li,
+td,
+th,
+label {
+  font-family: "Rubik", sans-serif;
+}
+
+.ant-form-item-label {
+  margin: 0 !important;
+  padding: 0 !important;
+}
