--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import 'react-toastify/dist/ReactToastify.css';
+@import "react-toastify/dist/ReactToastify.css";
 h1,
 h2,
 h3,
@@ -23,4 +23,8 @@ label {
 .ant-form-item-label {
   margin: 0 !important;
   padding: 0 !important;
+}
+
+.ant-switch {
+  background-color: rgb(112, 112, 112);
 }
